--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             h3,
             h4 {
+                text-transform: capitalize;
                 padding: 10px 0;
             }
 
@@ -62,7 +63,6 @@
                 <h3>Tasks</h3>
 
                 <ol id="incompleteTasks">
-
                     <li>
                         <form class="rename-task__container">
                             <input type="text" name="rename-task" value="Task Name" id="taskRename" />
