Clear Input Field, Rebinding Buttons, & Done Task

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1>To-Do List</h1>
 
             <form class="add-task__container">
-                <input type="text" placeholder="Enter Task" name="task-input" id="taskInput" />
+                <input type="text" placeholder="Enter Task" name="task-input" autocomplete="off" id="taskInput" />
                 <button type="submit" id="addButton">Add</button>
             </form>
 
@@ -76,15 +76,7 @@
                 <h3>Completed Tasks</h3>
 
                 <ol id="completeTasks">
-                    <li>
-                        <h4>Task Name</h4>
-                        
-                        <div class="actions">
-                            <button class="edit">Edit</button>
-                            <button class="delete">Delete</button>
-                            <button class="undo">Undo</button>
-                        </div>
-                    </li>
+                    
                 </ol>
             </div>
 
