--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
             input {
                 margin: 5px 0;
+                text-transform: capitalize;
             }
 
             button:hover {
@@ -63,12 +64,7 @@
                 <h3>Tasks</h3>
 
                 <ol id="incompleteTasks">
-                    <li>
-                        <form class="rename-task__container">
-                            <input type="text" name="rename-task" value="Task Name" id="taskRename" />
-                            <button type="submit">Save</button>
-                        </form>
-                    </li>
+                    
                 </ol>
             </div>
 
